# Snake1976

./: .gitignore  CMakeLists.txt  README.md
include/: Buttons.h  Cell.h  Game.h  Global.h  Grid.h  GridLayer.h  InputLayer.h  SceneManager.h  Scenes.h  SoundMixer.h  Text.h  TextureManager.h  Timer.h  UILayer.h  WindowLayer.h
include/GUI/: UILayer.h
include/layers/: AudioLayer.h  EventLayer.h  GridLayer.h  InputLayer.h  Layer.h  SceneLayer.h  TextureLayer.h  UILayer.h  WindowLayer.h
include/snake1976/: FoodCell.h  PathCell.h  Snake.h  SnakeCell.h  SnakeGrid.h
src/: SceneManager.cpp  buttons.cpp  cell.cpp  font_data.cpp  game.cpp  grid.cpp  gridLayer.cpp  inputLayer.cpp  main.cpp  text.cpp  textureManager.cpp  timer.cpp  uiLayer.cpp  windowLayer.cpp
src/snake1976/: snake.cpp  snakeGrid.cpp
